crates/rtd-core/src/unit_tests/snapshots/rtd_core__authority__authority_tests__clever_abort_with_const_execution_error_source.snap
---
source: crates/rtd-core/src/unit_tests/authority_tests.rs
assertion_line: 3975
expression: execution_error_source.unwrap()
---
VMError with status ABORTED with sub status 13906834251652792321 at location Module ModuleId { address: 0000000000000000000000000000000000000000000000000000000000000000, name: Identifier("aborts") } and message 0x0000000000000000000000000000000000000000000000000000000000000000::aborts::abort_with_const at offset 1 at code offset 1 in function definition 2
