crates/rtd-core/src/unit_tests/snapshots/rtd_core__authority__authority_tests__clever_only_abort_abort_error.snap
---
source: crates/rtd-core/src/unit_tests/authority_tests.rs
assertion_line: 3897
expression: abort_error.unwrap()
---
Module ID: 0x0000000000000000000000000000000000000000000000000000000000000000::aborts
Function: only_abort
Line: 7
